syntax/src/snapshots/syntax__parse__tests__parse_apply.snap
---
source: syntax/src/parse.rs
expression: root.unwrap()
---
Root {
    items: [
        Expr(
            Apply {
                fun: Ident(
                    InternedString(f),
                ) @ 0..1,
                args: [
                    Ident(
                        InternedString(x),
                    ) @ 2..3,
                    Ident(
                        InternedString(y),
                    ) @ 4..5,
                ],
            },
        ) @ 0..5,
    ],
} @ 0..5
