syntax/src/snapshots/syntax__parse__tests__parse_bool.snap
---
source: syntax/src/parse.rs
expression: root.unwrap()
---
Root {
    items: [
        Expr(
            Lit(
                Bool(
                    true,
                ),
            ),
        ) @ 0..4,
    ],
} @ 0..4
