syntax/src/snapshots/syntax__parse__tests__parse_def.snap
---
source: syntax/src/parse.rs
expression: root.unwrap()
---
Root {
    items: [
        Def {
            pat: Ident(
                InternedString(x),
            ) @ 0..1,
            expr: Lit(
                Num(
                    Ratio {
                        numer: 1,
                        denom: 1,
                    },
                ),
            ) @ 4..5,
        } @ 0..5,
    ],
} @ 0..5
