syntax/src/snapshots/syntax__parse__tests__parse_fn_def.snap
---
source: syntax/src/parse.rs
expression: root.unwrap()
---
Root {
    items: [
        Fn {
            name: InternedString(add) @ 0..3,
            params: [
                Ident(
                    InternedString(x),
                ) @ 4..5,
                Ident(
                    InternedString(y),
                ) @ 6..7,
            ],
            body: Infix {
                op: Add @ 12..13,
                lhs: Ident(
                    InternedString(x),
                ) @ 10..11,
                rhs: Ident(
                    InternedString(y),
                ) @ 14..15,
            } @ 10..15,
        } @ 0..15,
    ],
} @ 0..15
