syntax/src/snapshots/syntax__parse__tests__parse_ident.snap
---
source: syntax/src/parse.rs
expression: root.unwrap()
---
Root {
    items: [
        Expr(
            Ident(
                InternedString(x),
            ),
        ) @ 0..1,
    ],
} @ 0..1
