syntax/src/snapshots/syntax__parse__tests__parse_infix.snap
---
source: syntax/src/parse.rs
expression: root.unwrap()
---
Root {
    items: [
        Expr(
            Infix {
                op: Add @ 2..3,
                lhs: Ident(
                    InternedString(x),
                ) @ 0..1,
                rhs: Infix {
                    op: Mul @ 6..7,
                    lhs: Ident(
                        InternedString(y),
                    ) @ 4..5,
                    rhs: Ident(
                        InternedString(z),
                    ) @ 8..9,
                } @ 4..9,
            },
        ) @ 0..9,
    ],
} @ 0..9
