syntax/src/snapshots/syntax__parse__tests__parse_let.snap
---
source: syntax/src/parse.rs
expression: root.unwrap()
---
Root {
    items: [
        Expr(
            Let {
                pat: Ident(
                    InternedString(x),
                ) @ 4..5,
                expr: Lit(
                    Num(
                        Ratio {
                            numer: 1,
                            denom: 1,
                        },
                    ),
                ) @ 8..9,
                body: Ident(
                    InternedString(x),
                ) @ 13..14,
            },
        ) @ 0..14,
    ],
} @ 0..14
