syntax/src/snapshots/syntax__parse__tests__parse_let_fn.snap
---
source: syntax/src/parse.rs
expression: root.unwrap()
---
Root {
    items: [
        Expr(
            Fn {
                name: InternedString(add) @ 4..7,
                params: [
                    Ident(
                        InternedString(x),
                    ) @ 8..9,
                    Ident(
                        InternedString(y),
                    ) @ 10..11,
                ],
                expr: Infix {
                    op: Add @ 16..17,
                    lhs: Ident(
                        InternedString(x),
                    ) @ 14..15,
                    rhs: Ident(
                        InternedString(y),
                    ) @ 18..19,
                } @ 14..19,
                body: Apply {
                    fun: Ident(
                        InternedString(add),
                    ) @ 23..26,
                    args: [
                        Lit(
                            Num(
                                Ratio {
                                    numer: 1,
                                    denom: 1,
                                },
                            ),
                        ) @ 27..28,
                        Lit(
                            Num(
                                Ratio {
                                    numer: 2,
                                    denom: 1,
                                },
                            ),
                        ) @ 29..30,
                    ],
                } @ 23..30,
            },
        ) @ 0..30,
    ],
} @ 0..30
