syntax/src/snapshots/syntax__parse__tests__parse_let_unary.snap
---
source: syntax/src/parse.rs
expression: "test_helper(\"let x = 1 in -x\")"
---
Root {
    items: [
        Expr(
            Let {
                pat: Ident(
                    InternedString(x),
                ) @ 4..5,
                expr: Lit(
                    Num(
                        Ratio {
                            numer: 1,
                            denom: 1,
                        },
                    ),
                ) @ 8..9,
                body: Prefix {
                    op: Neg @ 13..14,
                    expr: Ident(
                        InternedString(x),
                    ) @ 14..15,
                } @ 13..15,
            },
        ) @ 0..15,
    ],
} @ 0..15
